--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Sistema de Registro de Productos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -27,14 +28,14 @@
                 <div class="form-group">
                     <label for="bodega">Bodega</label>
                     <select id="bodega" name="bodega">
-                        <option value="">Seleccione una bodega</option>
+                        <option value=""></option>
                     </select>
                 </div>
                 
                 <div class="form-group">
                     <label for="sucursal">Sucursal</label>
                     <select id="sucursal" name="sucursal" disabled>
-                        <option value="">Seleccione una sucursal</option>
+                        <option value=""></option>
                     </select>
                 </div>
             </div>
@@ -43,7 +44,7 @@
                 <div class="form-group">
                     <label for="moneda">Moneda</label>
                     <select id="moneda" name="moneda">
-                        <option value="">Seleccione una moneda</option>
+                        <option value=""></option>
                     </select>
                 </div>
                 
